--- a/css/style.css
+++ b/css/style.css
@@ -644,6 +644,20 @@ nav ul ul ul li {
     text-align: left;
 }
 
+.item {
+    display: block;
+    align-items: center;
+    justify-content: flex-start;
+    color: #fff;
+    background-color: #337ab7;
+    border-radius: 15px;
+    height: 160px;
+    width: 160px;
+    padding: 5px;
+    margin: 10px;
+    text-align: center;
+}
+
 footer {
     text-align: center;
     max-width: 1100px;
